log
Sat 30 Mar 2024 10:24:13 PM UTC: 
 tests:  0|6
total_score: 0/70
31c9e62
Sat 30 Mar 2024 10:25:39 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:3: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   33 |   list[0] = (List *)malloc(sizeof(List));]
      |   ^~~~
      |   List
list.c:33:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:33:42: error: expected statement before ‘]’ token
   33 |   list[0] = (List *)malloc(sizeof(List));]
      |                                          ^
Compilation failed
348e246
Sat 30 Mar 2024 10:25:52 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:17: error: invalid initializer
   33 |   int list[0] = (List *)malloc(sizeof(List));]
      |                 ^
list.c:33:46: error: expected statement before ‘]’ token
   33 |   int list[0] = (List *)malloc(sizeof(List));]
      |                                              ^
list.c:33:7: error: unused variable ‘list’ [-Werror=unused-variable]
   33 |   int list[0] = (List *)malloc(sizeof(List));]
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
ba0b7c5
Sat 30 Mar 2024 10:26:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:17: error: invalid initializer
   33 |   int list[0] = (List *)malloc(sizeof(List));
      |                 ^
list.c:33:7: error: unused variable ‘list’ [-Werror=unused-variable]
   33 |   int list[0] = (List *)malloc(sizeof(List));
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
a3bd2a2
